coords bug fixed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <mgl-map
       [style]="'mapbox://styles/mapbox/streets-v9'"
       [zoom]="[9]"
-      [center]="[lat, lon]"
+      [center]="[lon, lat]"
     >
   </mgl-map>
     
