current position marker

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
       [style]="'mapbox://styles/mapbox/streets-v9'"
       [zoom]="[16]"
       [center]="[lon, lat]"
-    ><mgl-marker [lngLat]="[lon, lat]"><img src="http://static.tzjsyxw.cn/js/ckeditor/plugins/smiley/images/5.gif"/></mgl-marker>
+    ><mgl-marker [lngLat]="[lon, lat]"><img src="./assets/img/currentPos.png"/></mgl-marker>
   </mgl-map>
     
