added parking marker and save current position locally

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,15 @@
-<div>{{lat|number:'2.1-5'}}, {{lon|number:'2.1-5'}}</div>
-<mgl-map
-      [style]="'mapbox://styles/mapbox/streets-v9'"
-      [zoom]="[16]"
-      [center]="[lon, lat]"
-    ><mgl-marker [lngLat]="[lon, lat]"><img src="./assets/img/currentPos.png"/></mgl-marker>
+<div style="margin-left:1%">
+  <div>Current position: {{lat|number:'2.1-5'}}, {{lon|number:'2.1-5'}}</div>
+  <div style="margin-bottom: 1%;width: 99%;">
+    <button class="btn btn-lg btn-primary btn-block" (click)="park()">Park</button>
+  </div>
+  <mgl-map
+        [style]="'mapbox://styles/mapbox/streets-v9'"
+        [zoom]="[16]"
+        [center]="[lon, lat]"
+      >
+      <mgl-marker [lngLat]="[lon, lat]"><img src="./assets/img/currentPos.png"/></mgl-marker>
+      <mgl-marker *ngIf="renderMarker" [lngLat]="[lon, lat]"><img src="./assets/img/park.png"/></mgl-marker>
   </mgl-map>
-    
+</div>
+
