--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div style="margin-left:1%">
   <div class="row" style="margin-top: 1%;margin-bottom: 1%;width: 100%;">
     <div style="width:31.7%;margin-left:1.2%;margin-right:0%">
-        <button class="btn btn-lg btn-primary btn-block" (click)="park()">Current location park</button>
+        <button class="btn btn-lg btn-primary btn-block" (click)="customPark()">Park here-></button>
     </div>
-    <div style="width:31.7%;margin-left:1.8%;margin-right:0%;font-size: 28px;text-align: center">
+    <div style="width:31.7%;margin-left:1.8%;margin-right:0%;font-size: 18px;text-align: center;padding-top:10px ">
        {{customParkLat|number:'2.1-5'}}, {{customParkLon|number:'2.1-5'}}
     </div>
     <div style="width:31.7%;margin-left:1.8%;margin-right:0%">
-        <button class="btn btn-lg btn-primary btn-block" (click)="customPark()">Click on map park</button>
+        <button class="btn btn-lg btn-primary btn-block" (click)="park()">Park current</button>
     </div>        
   </div>
   <div class="mgl-map" id="map"></div>
