--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,6 @@
-<div style="margin-left:1%">
-  <div class="row" style="margin-top: 1%;margin-bottom: 1%;width: 100%;">
-    <div style="width:31.7%;margin-left:1.2%;margin-right:0%">
-        <button class="btn btn-lg btn-primary btn-block" (click)="customPark()">Park here-></button>
-    </div>
-    <div style="width:31.7%;margin-left:1.8%;margin-right:0%;font-size: 18px;text-align: center;padding-top:10px ">
-       {{customParkLat|number:'2.1-5'}}, {{customParkLon|number:'2.1-5'}}
-    </div>
-    <div style="width:31.7%;margin-left:1.8%;margin-right:0%">
-        <button class="btn btn-lg btn-primary btn-block" (click)="park()">Park current</button>
-    </div>        
+<div style="margin:0.3rem">
+  <div style="width:99%;margin-bottom: 0.5rem">
+    <button class="btn btn-sm btn-primary btn-block" (click)="park()">Park</button>
   </div>
   <div class="mgl-map" id="map"></div>
 </div>
